src/Components/Home/home.css
@import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap");
.menu-icon-show {
  position: fixed;
  top: 3.2rem;
  color: white;
  transform: rotate(0.1turn) translateX(1.6rem);
  transition: 600ms;
  font-family: "Permanent Marker", cursive;
}
.menu-icon-hide {
  position: fixed;
  top: -1rem;
  color: white;
  transform: rotate(0.9turn) translateX(-2rem);
  transition: 600ms;
  font-family: "Permanent Marker", cursive;
}
.fa-share {
  transform: rotate(0.7turn);
}
.home {
  display: flex;
  align-items: center;
  transition: 600ms;
  position: absolute;
  width: 100%;
  height: 100vh;
  padding-bottom: 2rem;
}
.home-light {
  background-color: white;
}
.home-dark {
  background-color: rgb(34, 34, 34);
}
.home-light p {
  color: black;
}
.home-dark p {
  color: white;
}
.show-nav {
  filter: blur(5px);
}
.home-container {
  width: 80%;
  margin: 0 auto;
  margin-top: 3rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  line-height: 2rem;
  font-size: 1.5rem;
  text-align: left;
  transition: 600ms;
}
.home-container-light {
  color: black;
}
.home-container-dark {
  color: white;
}
.image-container {
  display: flex;
  justify-content: center;
}
.image-container img {
  max-height: 30rem;
  max-width: 100%;
  border-radius: 100%;
}
.text-container p {
  margin-top: -1rem;
}
.home-header {
  transition: 600ms;
}
.home-header-show {
  margin-top: 2rem;
}
.home-container h2 {
  font-weight: 400;
}
.home-header-hide {
  margin-top: 2rem;
  transform: translateX(100rem);
}
.goodbye-header {
  transition: 600ms;
  margin-top: -7rem;
}
.goodbye-header-show {
  transform: translateX(0rem);
}
.goodbye-header-hide {
  transform: translateX(-100rem);
}
@media only screen and (max-width: 600px) {
  .home {
    height: 100vh;
    overflow: hidden;
    margin: 0;
  }
  .image-container img {
    width: 90%;
  }
  .home-container {
    width: 95%;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: -1rem;
  }
  .home-container h2 {
    margin-left: 1rem;
  }
  .goodbye-header {
    margin-top: -10rem;
  }
}

@media only screen and (min-width: 600px) {
  .menu-icon {
    display: none;
  }
  .text-container {
    width: 80%;
  }
  .image-container img {
    max-height: 20rem;
    box-shadow: 1px 1px 3px rgb(66, 66, 66);
  }
  .home-container {
    padding: 2rem;
    width: 80%;
    height: 80%;
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .image-container {
    margin-top: 3rem;
  }
  .text-container {
    margin-bottom: 3rem;
  }
}
@media only screen and (min-width: 600px) {
  .home-container {
    border: 0.5px solid rgb(66, 66, 66);
    border-radius: 5px;
  }
}
@media only screen and (min-width: 1000px) {
  .home-container {
    padding: 2rem;
    width: 80%;
    height: 70%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    border: 0.5px solid rgb(66, 66, 66);
    border-radius: 5px;
  }
  .home {
    height: 100%;
  }
  .image-container img {
    max-height: 20rem;
  }
  .about-header {
    max-width: 30rem;
  }
  .text-container {
    width: 40%;
  }
  .image-container {
    margin-left: 2rem;
    margin-right: 2rem;
  }
  .text-container {
    margin-right: 2rem;
  }
}
@media only screen and (min-width: 1200px) {
  .text-container {
    width: 40%;
  }
  .image-container img {
    max-height: 22rem;
  }
  .home-container {
    width: 80%;
    display: flex;
    flex-direction: row;
    align-items: space-between;
  }
}
@media only screen and (min-width: 1400px) {
  .image-container img {
    max-height: 25rem;
  }
}
@media only screen and (min-width: 1600px) {
  .text-container {
    width: 30%;
  }
  .image-container img {
    max-height: 30rem;
  }
}

